--- a/index.html
+++ b/index.html
@@ -1,52 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Louis.GitHub.blogs by LouisProgress</title>
-  </head>
+  <title>爬虫框架入门之常用爬虫介绍（一）</title>
+  <meta name="description" content="爬虫框架入门之常用爬虫介绍（一）">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/LouisProgress/louis.github.blogs">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Louis.GitHub.blogs</h1>
-            <h2>WebCollector 爬虫框架入门之常用爬虫介绍（一）</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/LouisProgress/louis.github.blogs/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/LouisProgress/louis.github.blogs/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h2>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">爬虫框架入门之常用爬虫介绍（一）</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">爬虫框架入门之常用爬虫介绍（一）</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/LouisProgress/louis.github.blogs/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/LouisProgress/louis.github.blogs/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/LouisProgress/louis.github.blogs" class="code">View 爬虫框架入门之常用爬虫介绍（一） on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h2>
 <a id="一-webcollector-爬虫简介" class="anchor" href="#%E4%B8%80-webcollector-%E7%88%AC%E8%99%AB%E7%AE%80%E4%BB%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>一、 WebCollector 爬虫简介</h2>
 
 <p>爬虫，基本可以分3类：
@@ -152,22 +142,26 @@
 <p>在非JAVA语言编写的爬虫中，有很多优秀的爬虫。这里单独提取出来作为一类，并不是针对爬虫本身的质量进行讨论，而是针对larbin、scrapy这类爬虫，对开发成本的影响。</p>
 
 <p>先说python爬虫，python可以用30行代码，完成JAVA 50行代码干的任务。python写代码的确快，但是在调试代码的阶段，python代码的调试往往会耗费远远多于编码阶段省下的时间。使用python开发，要保证程序的正确性和稳定性，就需要写更多的测试模块。当然如果爬取规模不大、爬取业务不复杂，使用scrapy这种爬虫也是蛮不错的，可以轻松完成爬取任务。</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/LouisProgress">LouisProgress</a> can be found on <a href="https://github.com/LouisProgress/louis.github.blogs">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/LouisProgress" class="avatar"><img src="https://avatars2.githubusercontent.com/u/17307458?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/LouisProgress">LouisProgress</a> maintains <a href="https://github.com/LouisProgress/louis.github.blogs">爬虫框架入门之常用爬虫介绍（一）</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/LouisProgress/louis.github.blogs/tarball/master" class="tar">tar</a><a href="https://github.com/LouisProgress/louis.github.blogs/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
